# quantum-protein-folding

./: .buildinfo  .gitignore  LICENSE  README.md  backend.html  builder.html  contact.html  core.html  distance.html  encoding.py  genindex.html  index.html  interaction.html  logger.html  main.py  modules.html  objects.inv  protein.html  protein.py  py-modindex.html  pyproject.toml  result.html  search.html  searchindex.js  usage-demo-en.ipynb  utils.html  utils.py  visualizer.py
.doctrees/: backend.doctree  builder.doctree  contact.doctree  core.doctree  distance.doctree  environment.pickle  index.doctree  interaction.doctree  logger.doctree  modules.doctree  protein.doctree  result.doctree  utils.doctree
.github/workflows/: check-docs.yml  deploy-docs.yml  lint.yml  ruff-lint-check.yml  type-check.yml
_sources/: backend.rst.txt  core.rst.txt
classical/: main.py  requirements.txt  utils.py  visualizer.py
docs/: README.md  builder.rst  conf.py  usage-demo-en.ipynb  usage-demo-pl.ipynb  utils.rst
docs/sphinx/: conf.py  contact.rst  distance.rst  index.rst  interaction.rst  logger.rst  modules.rst  protein.rst  result.rst
quantum/: .env.example  README.md  main.py  pyproject.toml  ruff.toml
quantum/src/: .env.example  README.md  constants.py  contact_map_main_main.txt  distance_map.txt  distance_map_axes.txt  enums.py  exceptions.py  main.py  pyproject.toml  requirements.txt  ruff.toml  test_distance_map.py
quantum/src/backend/: __init__.py  backend_factory.py  transpiling_sampler.py
quantum/src/builder/: __init__.py  hamiltonian_builder.py
quantum/src/contact/: __init__.py  contact_map.py
quantum/src/distance/: __init__.py  distance_map.py
quantum/src/interaction/: __init__.py  hp_interaction.py  interaction.py  mj_interaction.py
quantum/src/logger/: logger.py
quantum/src/protein/: bead.py  chain.py  protein.py
quantum/src/protein/bead/: __init__.py  bead.py  main_bead.py  placeholder_side_bead.py  side_bead.py
quantum/src/protein/chain/: __init__.py  chain.py  main_chain.py  side_chain.py
quantum/src/result/: models.py
quantum/src/result/interpreter/: __init__.py  result_interpreter.py
quantum/src/result/visualizer/: result_visualizer.py
quantum/src/utils/: plot_utils.py  qubit_utils.py  result_interpretation_utils.py  setup_utils.py  visualizer_utils copy.py  visualizer_utils.py
quantum/tests/: test_utils.py
src/: constants.py  enums.py  exceptions.py  main.py  optimizer_benchmark.py
src/backend/: backend_factory.py  transpiling_sampler.py
src/builder/: hamiltonian_builder.py
src/contact/: contact_map.py
src/distance/: distance_map.py
src/interaction/: __init__.py  hp_interaction.py  interaction.py  mj_interaction.py
src/logger/: logger.py
src/protein/: protein.py
src/protein/bead/: __init__.py  bead.py  main_bead.py  placeholder_side_bead.py  side_bead.py
src/protein/chain/: __init__.py  chain.py  main_chain.py  side_chain.py
src/resources/: hp_matrix.txt
src/result/: models.py
src/result/interpreter/: __init__.py  result_interpreter.py
src/result/visualizer/: __init__.py  result_visualizer.py
src/utils/: qubit_utils.py  result_interpretation_utils.py  setup_utils.py
tests/: test_utils.py
