[project]
name = "quantum-protein-folding"
version = "0.1.0"
description = "Quantum approach to a protein folding problem"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "plotly>=6.4.0",
    "python-dotenv>=1.2.1",
    "qiskit>=2.2.1",
    "qiskit-algorithms>=0.4.0",
    "qiskit-ibm-runtime>=0.43.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.5.2",
    "interrogate>=1.7.0",
    "pyrefly>=0.43.1",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "tests",
    "docs",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "D",    # pydocstyle
    "RUF",  # Ruff-specific rules
]

ignore = [
    "E501", # ignore line too long -> handled by black
]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.interrogate]
ignore-init-module = true
fail-under = 90
exclude = [
    "tests",
    "docs",
]
verbose = 2
color = true
