[project]
name = "quantum-protein-folding"
version = "0.1.0"
description = "Quantum approach to a protein folding problem"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qiskit>=2.2.1",
    "qiskit-algorithms>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]