[project]
name = "quantum-protein-folding"
version = "0.1.0"
description = "Quantum approach to a protein folding problem"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "plotly>=6.4.0",
    "python-dotenv>=1.2.1",
    "qiskit>=2.2.1",
    "qiskit-algorithms>=0.4.0",
    "qiskit-ibm-runtime>=0.43.1",
]
